# mcp-ragex

./: .dockerignore  .gitignore  .mcp.json  .mcpignore  .mcpignore.example  2025-07-15-before-cpg-start.txt  CLAUDE.md  Dockerfile  Makefile  README.md  README_search.md  debug_mcp_flow.md  docker-compose.nvidia.yml  docker-compose.prod.yml  docker-compose.yml  fix_mcp_stderr_plan.md  index_and_search.cast  install.sh  mcp_coderag.sh  mcp_coderag_pwd.sh  mcp_launcher.py  mcp_ragex.sh  mcp_ragex_old.sh  mcp_server.sh  mcp_server_entry.py  mcp_server_isolated.sh  pyproject.toml  ragex  ragex-mcp  ragex.py  ragex.sh  ragex_search.py  requirements-cpu.txt  requirements.txt  run_server.sh  test_parallel_extraction.py  test_patterns.py  test_ragex_python.py  test_unified_search.py
.claude/: settings.local.json
benchmark/: benchmark_analysis.py  benchmarking_instructions.md  search_benchmarks.csv.xz
cast/: .gitattributes  claude.cast  install.cast
chroma_db/: chroma.sqlite3  index_metadata.json
config/: claude_code_config.json
doc/: auto-start-daemon-plan.md  benchmark.claude  capability-matrix.md  claude_code_integration.md  code_property_graph_analysis.md  context.md  cpg_implementation_plan.md  cpg_quick_start.md  docker-architecture.md  docker-cicd-guide.md  docker-cicd-publishing.md  docker-cicd-summary.md  docker-development-workflow.md  docker-layered-build.md  docker-split-image-plan.md  docker_migration_plan.md  docker_performance_optimization.md  embedding_configuration.md  enhanced-publishing-plan.md  enhanced_ignore_implementation.md  environment-variables.md  (+34 more)
(+162 files in other folders)
